backface-visibility fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,7 +93,7 @@ body {
 }
 
 .flip {
-    height: 368px;
+    height: 388px;
     perspective: 1000px;
 }
 
@@ -116,6 +116,8 @@ body {
     width: 100%;
     height: 100%;
     background: #fff;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
 .flip > .inner > .back {
